--- a/index.html
+++ b/index.html
@@ -4,28 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Bitcount+Single+Ink:wght@100..900&display=swap" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css2?family=Bitcount+Single+Ink:wght@100..900&family=Lexend+Giga:wght@100..900&display=swap" rel="stylesheet">
-<style>
-    a{
-        font-family: "Lexend Giga", sans-serif;;
-    }
-</style>
 </head>
 <body>
-    <h1>Bem vindo ao meu Site!</h1>
-    <h3>Aqui estão alguns links</h3>
-<p></p>
-    <p></p>
-    <a href="borda.html">Borda</a><br>
-    <a href="classe.html">Classe</a><br>
-    <a href="fonte-externa.html">Fontes externas</a><br>
-    <a href="fontes.html">Fontes </a><br>
-    <a href="mouse.html">Mouse</a><br>
-    <a href="estilo.html">Estilo</a><br>
+    <style>
+a{
+    color: blue;
+    text-decoration: none;
+}
 
-
-    
+    </style>
+        <h1>Links para as páginas da Aula 3:</h1>
+<p><p></p></p>
+<h3>
+    <a href="alerta.html">Alerta</a><br>
+    <a href="exibir.html">Exibir</a><br>
+    <a href="compara-texto.html">Compara texto</a><br>
+    <a href="comparacoes.html">Comparações</a><br>
+    <a href="cep.html">CEP</a><br>
+    <a href="calculadora.html">Calculadora</a><br>
+    <a href="intervalo.html">Intervalo</a><br>
+    <a href="texto.html">Texto</a><br>
+    <a href="variavel.html">Variavel</a><br>
+    <a href="data.html">Data</a><br>
+    <a href="abrir-pagina.html">Abrir Página</a><br>
+    </h3>
 </body>
 </html>
